fix: Hide search thumbnails on mobile

--- a/assets/sass/search.scss
+++ b/assets/sass/search.scss
@@ -87,6 +87,10 @@
 
   .pagefind-ui__result-thumb {
     width: 10rem;
+
+    @media (max-width: #{$breakpoint-md}) {
+      display: none;
+    }
   }
 
   .pagefind-ui__result-link {
